@@ -5,10 +5,73 @@ package Padre::Project::Perl;
 use 5.008;
 use strict;
 use warnings;
+use File::Spec     ();
 use Padre::Project ();
 
 our $VERSION = '0.56';
 our @ISA     = 'Padre::Project';
+
+
+
+
+
+######################################################################
+# Configuration and Intuition
+
+sub headline {
+	my $self = shift;
+	$self->{headline} or
+	$self->{headline} = $self->_headline;
+}
+		
+sub _headline {
+	my $self = shift;
+	my $root = $self->root;
+
+	# The intuitive approach is to find the top-most .pm file
+	# in the lib directory.
+	my $cursor = File::Spec->catdir( $root, 'lib' );
+	unless ( -d $cursor ) {
+		# Weird-looking Perl distro...
+		return undef;
+	}
+
+	while ( 1 ) {
+		local *DIRECTORY;
+		opendir( DIRECTORY, $cursor )    or last;
+		my @files = readdir( DIRECTORY ) or last;
+		closedir( DIRECTORY )            or last;
+
+		# Can we find a single dominant module?
+		my @modules = grep { /\.pm\z/ } @files;
+		if ( @modules == 1 ) {
+			return File::Spec->catfile( $cursor, $modules[0] );
+		}
+
+		# Can we find a single subdirectory without punctuation to descend?
+		# We use a slightly unusual checking process, because we want to abort
+		# as soon as we see the second subdirectory (because this scanning
+		# happens in the foreground and we don't want to overblock)
+		my $candidate = undef;
+		foreach my $file ( @files ) {
+			next if $file =~ /\./;
+			my $path = File::Spec->catdir( $cursor, $file );
+			next unless -d $path;
+			if ( $candidate ) {
+				# Shortcut, more than one
+				last;
+			} else {
+				$candidate = $path;
+			}
+		}
+
+		# Did we find a single candidate?
+		last unless $candidate;
+		$cursor = $candidate;
+	}
+
+	return undef;
+}
 
 
 
